--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: Or1GG1n # Your GitHub organization or username, where this repository lives
+repo: Or1GG1n-uptime # The name of this repository
 
 sites:
   - name: Google
@@ -20,10 +20,10 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  #  cname: demo.upptime.js.org
+   baseUrl: /Or1GG1n-uptime
+  logoUrl: https://avatars.githubusercontent.com/u/83551876?v=4
+  name: Or1GG1n-uptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
