--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,26 +3,26 @@ owner: Or1GG1n # Your GitHub organization or username, where this repository liv
 repo: Or1GG1n-uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+ # - name: Google
+#    url: https://www.google.com
+#  - name: Wikipedia
+#    url: https://en.wikipedia.org
+#  - name: Hacker News
+#    url: https://news.ycombinator.com
+  - name: Minecamp SERVER
+    url: http://65.108.21.222:25913/
+ # - name: IPv6 test
+ #   url: forwardemail.net
+#    port: 80
+ #   check: "tcp-ping"
+ #   ipv6: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   #  cname: demo.upptime.js.org
    baseUrl: /Or1GG1n-uptime
-  logoUrl: https://avatars.githubusercontent.com/u/83551876?v=4
+  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Or1GG1n-uptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
