--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: Or1GG1n # Your GitHub organization or username, where this repository lives
-repo: Or1GG1n-uptime # The name of this repository
+owner: Or1GG1n2 # Your GitHub organization or username, where this repository lives
+repo: 0riginuptime # The name of this repository
 
 sites:
   - name: Minecamp SERVER
